Configure Android Splash Screen API and custom icon
- Add `ic_splash_icon.xml` vector drawable featuring a stylized geometric design.
- Update `Base.Theme.Jarvis` in both light and night configurations to set `windowBackground` to black.
- Implement Splash Screen API 31+ attributes including `windowSplashScreenBackground`, `windowSplashScreenIconBackgroundColor`, and `windowSplashScreenAnimatedIcon`.

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,6 +5,11 @@
         <item name="colorPrimary">@color/iron_man_red</item>
         <item name="colorSecondary">@color/iron_man_gold</item>
         <item name="android:statusBarColor">@color/iron_man_red</item>
+        <item name="android:windowBackground">@color/black</item>
+        <!-- Splash Screen API 31+ -->
+        <item name="android:windowSplashScreenBackground">@color/black</item>
+        <item name="android:windowSplashScreenIconBackgroundColor">@color/black</item>
+        <item name="android:windowSplashScreenAnimatedIcon">@drawable/ic_splash_icon</item>
     </style>
 
     <style name="Theme.Jarvis" parent="Base.Theme.Jarvis" />
