Implement Groceries feature with RecyclerView and item layout

--- a/app/src/main/res/layout/fragment_groceries_list.xml
+++ b/app/src/main/res/layout/fragment_groceries_list.xml
@@ -2,15 +2,14 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg_jarvis"
-    >
+    android:background="@drawable/bg_jarvis">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/title_groceries_list"
-        android:textColor="@color/iron_man_cyan"
-        android:textSize="24sp"
-        android:fontFamily="monospace"
-        android:layout_gravity="center" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvGroceries"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:clipToPadding="false"
+        android:paddingTop="12dp"
+        android:paddingBottom="12dp" />
+
 </FrameLayout>
