--- a/app/src/main/res/drawable/ic_bread.xml
+++ b/app/src/main/res/drawable/ic_bread.xml
@@ -1,8 +1,20 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="40dp"
-    android:height="40dp"
+    android:width="28dp"
+    android:height="28dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
-  <path android:fillColor="#00E5FF"
-      android:pathData="M20,4H4C2.9,4 2,4.9 2,6v2c0,0.74 0.4,1.38 1,1.72V19c0,1.1 0.9,2 2,2h14c1.1,0 2,-0.9 2,-2V9.72C21.6,9.38 22,8.74 22,8V6C22,4.9 21.1,4 20,4zM15,15H9v-2h6V15zM20,8H4V6h16V8z"/>
+  <!-- Bread loaf body -->
+  <path android:fillColor="#D4A057"
+      android:pathData="M3,11c0,-2.5 2,-5 5,-5h8c3,0 5,2.5 5,5v7c0,1.1 -0.9,2 -2,2H5c-1.1,0 -2,-0.9 -2,-2V11z"/>
+  <!-- Top crust dome -->
+  <path android:fillColor="#C8832A"
+      android:pathData="M5,11c0,-3 1.5,-5 4,-5.5 0.6,-0.1 1.2,-0.2 1.5,-0.2 2.8,0 4,0.7 5,2 1,1.3 1.5,2.5 1.5,3.7H5z"/>
+  <!-- Score line across the top -->
+  <path android:fillColor="#A0621A"
+      android:strokeColor="#A0621A"
+      android:strokeWidth="0.8"
+      android:pathData="M7,10.5 Q12,8.5 17,10.5"/>
+  <!-- Bottom darker base -->
+  <path android:fillColor="#B87330"
+      android:pathData="M3,16h18v2c0,1.1 -0.9,2 -2,2H5c-1.1,0 -2,-0.9 -2,-2V16z"/>
 </vector>
