--- a/app/src/main/res/drawable/ic_cheese.xml
+++ b/app/src/main/res/drawable/ic_cheese.xml
@@ -1,8 +1,15 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="40dp"
-    android:height="40dp"
+    android:width="28dp"
+    android:height="28dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
-  <path android:fillColor="#00E5FF"
-      android:pathData="M2,14l9,-11 11,6v9c0,1.1 -0.9,2 -2,2H4c-1.1,0 -2,-0.9 -2,-2V14zM9,9m-1,0a1,1 0,1 1,2 0a1,1 0,1 1,-2 0M14,14m-1,0a1,1 0,1 1,2 0a1,1 0,1 1,-2 0"/>
+  <!-- Red rind/skin outer shape -->
+  <path android:fillColor="#CC2200"
+      android:pathData="M2,14l9,-11 11,6v9c0,1.1 -0.9,2 -2,2H4c-1.1,0 -2,-0.9 -2,-2V14z"/>
+  <!-- Yellow cheese body (slightly inset) -->
+  <path android:fillColor="#F5C800"
+      android:pathData="M4,15l7,-8.5 9,4.8v8.2c0,0.55 -0.45,1 -1,1H5c-0.55,0 -1,-0.45 -1,-1V15z"/>
+  <!-- Cheese holes -->
+  <path android:fillColor="#D4A800"
+      android:pathData="M9,15m-1,0a1,1 0,1 1,2 0a1,1 0,1 1,-2 0M14,17m-1,0a1,1 0,1 1,2 0a1,1 0,1 1,-2 0"/>
 </vector>
