--- a/app/src/main/res/drawable/ic_egg.xml
+++ b/app/src/main/res/drawable/ic_egg.xml
@@ -1,8 +1,8 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="40dp"
-    android:height="40dp"
+    android:width="28dp"
+    android:height="28dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
-  <path android:fillColor="#00E5FF"
+  <path android:fillColor="#F5E642"
       android:pathData="M12,2C8.69,2 6,6.69 6,12c0,3.31 2.69,6 6,6s6,-2.69 6,-6C18,6.69 15.31,2 12,2zM12,16c-2.21,0 -4,-1.79 -4,-4 0,-2.09 0.81,-4.08 2.12,-5.5C10.82,7.72 11.41,8 12,8s1.18,-0.28 1.88,-1.5C15.19,7.92 16,9.91 16,12 16,14.21 14.21,16 12,16z"/>
 </vector>
