--- a/app/src/main/res/drawable/ic_milk.xml
+++ b/app/src/main/res/drawable/ic_milk.xml
@@ -1,8 +1,8 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="40dp"
-    android:height="40dp"
+    android:width="28dp"
+    android:height="28dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
-  <path android:fillColor="#00E5FF"
+  <path android:fillColor="#FFFFFF"
       android:pathData="M18,3H6v2l2,2v13c0,0.55 0.45,1 1,1h6c0.55,0 1,-0.45 1,-1V7l2,-2V3zM13,13H11v-3h2V13zM11,15h2v2h-2V15z"/>
 </vector>
