--- a/app/src/main/res/layout/item_grocery.xml
+++ b/app/src/main/res/layout/item_grocery.xml
@@ -8,15 +8,26 @@
     android:background="@drawable/bg_grocery_item"
     android:padding="12dp">
 
-    <ImageView
-        android:id="@+id/imgGroceryIcon"
+    <!-- Circle background sits behind icon via z-ordering: background view first, then icon on top -->
+    <View
+        android:id="@+id/iconContainer"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:padding="8dp"
-        android:contentDescription="@string/title_groceries"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/imgGroceryIcon"
+        android:layout_width="28dp"
+        android:layout_height="28dp"
+        android:background="@null"
+        android:contentDescription="@string/title_groceries"
+        android:elevation="1dp"
+        app:layout_constraintBottom_toBottomOf="@id/iconContainer"
+        app:layout_constraintEnd_toEndOf="@id/iconContainer"
+        app:layout_constraintStart_toStartOf="@id/iconContainer"
+        app:layout_constraintTop_toTopOf="@id/iconContainer" />
 
     <TextView
         android:id="@+id/tvGroceryName"
@@ -29,7 +40,7 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/imgGroceryIcon"
+        app:layout_constraintStart_toEndOf="@id/iconContainer"
         app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
