--- a/app/src/main/res/layout/activity_groceries.xml
+++ b/app/src/main/res/layout/activity_groceries.xml
@@ -34,4 +34,15 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
 
+    <!-- Full-screen overlay container for the barcode scanner -->
+    <FrameLayout
+        android:id="@+id/scanner_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
