--- a/app/src/main/res/layout/fragment_inventory.xml
+++ b/app/src/main/res/layout/fragment_inventory.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg_jarvis">
@@ -10,6 +11,17 @@
         android:layout_height="match_parent"
         android:clipToPadding="false"
         android:paddingTop="12dp"
-        android:paddingBottom="12dp" />
+        android:paddingBottom="80dp" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fabScanLink"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="16dp"
+        android:contentDescription="@string/scan_to_link"
+        android:src="@drawable/ic_barcode"
+        app:backgroundTint="@color/iron_man_red"
+        app:tint="@color/iron_man_cyan" />
 
 </FrameLayout>
