--- a/app/src/main/res/layout/fragment_barcode_scanner.xml
+++ b/app/src/main/res/layout/fragment_barcode_scanner.xml
@@ -26,29 +26,31 @@
         app:layout_constraintVertical_bias="0.4" />
 
     <TextView
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="monospace"
         android:text="@string/scan_barcode_hint"
         android:textColor="@color/iron_man_cyan"
         android:textSize="14sp"
-        android:fontFamily="monospace"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.72" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btnCancelScan"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/cancel"
-        android:textColor="@color/iron_man_cyan"
         android:backgroundTint="@color/iron_man_red"
         android:fontFamily="monospace"
+        android:text="@string/cancel"
+        android:textColor="@color/iron_man_cyan"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginBottom="48dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintVertical_bias="0.22000003" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
